# AgencyOS

./: -  .env.example  .env.ui_test  .gitignore  .pre-commit-config.yaml  .ruffignore  ADR-002-ACHIEVED.md  AGENTS.md  AMBIENT_FEATURES_FOR_EXPERIMENTAL.md  ARTICLE_II_ENFORCEMENT_SUMMARY.md  AUTONOMOUS_EXCELLENCE_ACHIEVED.md  AUTONOMOUS_MISSION_COMPLETE.md  AUTONOMOUS_SESSION_COMPLETE.md  AUTONOMOUS_SESSION_FINAL_REPORT.md  CLAUDE.md  CODEHEALER_SELF_HEALING_REPORT.md  CONSTITUTIONAL_COMPLIANCE_GAP_ANALYSIS.json  CONSTITUTIONAL_COMPLIANCE_REPORT.md  CONSTITUTIONAL_COMPLIANCE_ROADMAP.md  CONSTITUTIONAL_VALIDATION_REPORT.md  COST_MONITORING_GUIDE.md  DEPLOY_NIGHT_RUN.md  DOCUMENTATION_OPTIMIZATION_COMPLETE.md  FEATURES.md  FEATURE_INVENTORY_GIT_UNIFIED.md  FULL_TEST_SUITE_STATUS.md  HEALING_MISSION_REPORT.md  HOW_LEARNING_WORKS.md  KNOWN_ISSUES_v1.0.1.md  LICENSE  MARS_ROVER_COMPLETE.md  MIGRATION.md  MUTATION_TESTING_COMPLETE.md  MUTATION_TESTING_IMPLEMENTATION_COMPLETE.md  Makefile  NEXT_AGENT_MISSION.md  NEXT_SESSION_MISSION.md  NEXT_SESSION_START.md  NEXT_SESSION_TRINITY.md  OPTIMIZATION_FRAMEWORKS_COMPLETE.md  (+136 more)
.claude/: settings.json
.snapshots/: README.md  consciousness-launch.md  consciousness-vectorstore-integration.md  constitutional-consciousness-v1.0.0-and-beyond.md  snap-2025-10-03-1745.md  snap-2025-10-03-2333.md  snap-2025-10-03-final.md  snap-2025-10-04-0043.md  snap-2025-10-04-0324.md  snap-2025-10-04-1425.md  snap-latest.md
.test_bloat_backup_20251003_230743/: test_bash_tool_infrastructure.py  test_git_error_paths.py  test_learning_loop_integration.py
agency/: integration_architecture.md
agency_code_agent/: __init__.py  agency_code_agent.py  instructions-gpt-5.md  instructions.md
agency_memory/: MCP_INTEGRATION_STANDARDS.md  MEMORY_ARCHITECTURE_ANALYSIS.md  __init__.py  enhanced_memory_store.py  enhanced_memory_store_result.py  firestore_store.py  learning.py  memory.py  memory_v2.py  production_wiring_insights_2025_10_01.json  swarm_memory.py  type_conversion_utils.py  vector_store.py
ai-dev-tasks/: generate-tasks.md
auditor_agent/: __init__.py  ast_analyzer.py  auditor_agent.py  instructions-gpt-5.md
chief_architect_agent/: __init__.py  chief_architect_agent.py  instructions-gpt-5.md
claude_code/: __init__.py  agency.py  claude_code_agent.py  comprehensive_qa_test_results.md  debug_tool_test.py  fib.py  final_qa_test_results.md  instructions.md  qa_test_results.md  requirements.txt  test_agency.py  test_sample.py  tool_integration_fix_plan.md  tool_integration_fix_verification.md  tool_integration_test.py  tool_test_results.md
core/: __init__.py  consolidate_tests.py  patterns.py  self_healing.py  telemetry.py  unified_edit.py
data/: demo_registry.json
demo_tasks/: README.md  messy_snake.py
docs/: A-Strategic-Framework-for-a-Hybrid-Autonomous-Trinity-on-Apple-Silicon.md  CODEBASE_IMPROVEMENT_OBSERVATIONS.md  COST_TRACKING.md  COST_TRACKING_EXAMPLES.md  DOCUMENTATION_AUDIT_REPORT.md  FIRESTORE_QUICKSTART.md  FIRESTORE_SETUP.md  INSIDE_REPORT_SESSION_2025_10_01.md  TEST_ARCHITECTURE.md  TRINITY_FOUNDATION_AUDIT.md  TRINITY_MODULE_CATEGORIZATION.csv  TRINITY_PREFLIGHT_CHECKLIST.md  TRINITY_REORGANIZATION_DELIVERABLES.md  TRINITY_REORGANIZATION_PLAN.md  TRINITY_SMOKE_TEST_RESULTS.md  TRINITY_UPGRADE_CHECKLIST.md  USER_MANUAL_PLAN.md  optimization_system_deployment.md  phase2-completion-report.md  phase3-completion-report.md  phase4-completion-report.md  result_pattern_guide.md  trinity_protocol_implementation.md  type_checking_guide.md  type_safety_implementation_plan.md
dspy_agents/: README.md  __init__.py  ab_testing.py  config.py  registry.py  type_definitions.py
dspy_audit/: READINESS_REPORT.md  README.md  __init__.py  adapter.py  config.py  metrics.py  modules.py  optimize.py  signatures.py  type_definitions.py
examples/: calculator.py  meta_learning_demo.py  test_calculator.py  test_calculator_healed.py
frontend_developer/: frontend_developer.py  instructions.md
learning_agent/: __init__.py  instructions-gpt-5.md  instructions.md  json_utils.py  learning_agent.py
learning_loop/: __init__.py  autonomous_triggers.py  event_detection.py  pattern_extraction.py
logs/: chief_architect_findings.json  patterns.db  test_health_report.txt
merger_agent/: __init__.py  instructions-gpt-5.md  instructions.md  merger_agent.py
meta_learning/: __init__.py  agent_registry.py  registry_api.py
patches/: PR-A-agent-registry.patch  PR-B-experiment-runner.patch  PR-C-audit-ledger.patch
pattern_intelligence/: __init__.py  coding_pattern.py  intelligence_metrics.py  meta_learning.py  migration.py  pattern_applicator.py  pattern_store.py
planner_agent/: __init__.py  instructions-gpt-5.md  instructions.md  planner_agent.py
plans/: README.md  TEMPLATE.md  article-vii-phase1-telemetry.md  meta-constitutional-evolution.md  plan-001-spec-driven-development.md  plan-002-vectorstore-harmonization.md  plan-007-toolsmith-agent.md  plan-008-orchestrator-engine.md  plan-009-performance-dashboard.md  plan-010-code-generation-suite.md  plan-013-kanban-observability-learning.md  plan-019-meta-consolidation-pruning.md  plan-20251004-fix-ci-workflow-pr25.md  plan-ambient-intelligence-system.md  plan-project-initialization.md  plan-question-engine.md
quality_enforcer_agent/: __init__.py  instructions.md  quality_enforcer_agent.py
scripts/: README.md  cleanup_bak_files.py  constitutional_check.py  health_check.sh  optimize_tests.sh  phase_2a_delete_bloat.sh  profile_tests.sh  rotate_logs.sh  run_chaos_tests.sh  run_mutation_tests.sh  run_property_tests.sh  run_smart_tests.sh  setup_firestore.sh  test_coverage.py  test_health_check.py  test_runner.py  validate_migration.py  validate_trinity_wiring.sh
shared/: AGENT_INSTRUCTION_CORE.md  PHASE_1.2_COMPLETION_REPORT.md  __init__.py  agent_context.py  agent_instruction_analysis.md  agent_utils.py  constitutional_validator.py  cost_tracker.py  hitl_protocol.py  instruction_loader.py  llm_client_cached.py  llm_cost_wrapper.py  local_model_server.py  memory_facade.py  message_bus.py  model_policy.py  utils.py  (+10 more)
(+1553 files in other folders)
